--- a/wware/develop/dannyanne/design/template/catalog/product/list/toolbar.phtml
+++ b/wware/develop/dannyanne/design/template/catalog/product/list/toolbar.phtml
@@ -59,8 +59,8 @@
 
     </div>
 
-    <?php //if( $this->isExpanded() ): ?>
-    <?php if( false ): ?>
+    <?php if( $this->isExpanded() ): ?>
+    <?php //if( false ): ?>
     <div class="sorter">
         <?php if( $this->isEnabledViewSwitcher() ): ?>
         <p class="view-mode">
@@ -77,7 +77,7 @@
             <?php endif; ?>
         </p>
         <?php endif; ?>
-    
+ 
         <div class="sort-by">
             <label><?php echo $this->__('Sort By') ?></label>
             <select onchange="setLocation(this.value)">
