--- a/wware/develop/dannyanne/design/template/wware/home_left_nav.phtml
+++ b/wware/develop/dannyanne/design/template/wware/home_left_nav.phtml
@@ -43,7 +43,8 @@
     	2031.1.17<br />
     <dt>カテゴリ</dt>
     <dd><ol>
-    <li><a href="list">全てのアイテム</a></li>
+
+<li><a href="list">ALL ITEMS</a></li>
 <?php
 $arr =  get_categories();
 $arr = array_flip($arr);
