--- a/wware/develop/dannyanne/design/template/catalog/product/list.phtml
+++ b/wware/develop/dannyanne/design/template/catalog/product/list.phtml
@@ -52,11 +52,31 @@
     <?php $_collectionSize = $_productCollection->count() ?>
     <?php $_columnCount = 4; //$this->getColumnCount(); ?>
     <?php $i=0; foreach ($_productCollection as $_product): ?>
+    <?php
+    	$div_new = "";
+    	$div_renew = "";
+    	$div_sale = "";
+    	$div_soldout = "";
+    	$badge = "";
+    	
+    	if(!$_product->isAvailable()){$div_soldout = '<div class="badge-soldout"></div>';}
+
+    	$lastarrivaldate = strtotime($_product->getLast_arrival_date());
+    	if(($lastarrivaldate + (60*60*24*7)) > now() && $lastarrivaldate != ""){ $div_renew = '<div class="badge-rearrival"></div>'; }
+    	
+    	if($_product->getData('news_to_date')){ $div_new = '<div class="badge-newarrival"></div>'; }
+
+    	if($_product->getData('special_to_date')){ $div_sale = '<div class="badge-sale"></div>'; }
+		    	
+
+    	$badge = $div_new . $div_renew . $div_sale . $div_soldout;
+
+	?>
         <?php if ($i++%$_columnCount==0): ?>
         <ul class="products-grid">
         <?php endif ?>
             <li class="item<?php if(($i-1)%$_columnCount==0): ?> first<?php elseif($i%$_columnCount==0): ?> last<?php endif; ?>">
-                <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(185,278); ?>" width="185" height="278" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" /></a>
+                <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image"><?php echo $badge; ?><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(185,278); ?>" width="185" height="278" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" /></a>
                 <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h2>
                 <?php if($_product->getRatingSummary()): ?>
                 <?php echo $this->getReviewsSummaryHtml($_product, 'short') ?>
@@ -94,3 +114,4 @@
     </div>
 </div>
 <?php endif; ?>
+
